# otus_7

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  config.h  config.h.in  console_handler.cpp  console_handler.h  file_handler.cpp  file_handler.h  handler.h  logger.cpp  logger.h  main.cpp  record.cpp  record.h  state_machine.cpp  state_machine.h  version.cpp  version.h
tests/: CMakeLists.txt  test_logger.cpp  test_state.cpp
